version's author is given instead.  For the full (known) list of authors along
with their complete changes, see the AUTHORS file.

-------------------------------------------------------------------------------

* Changes in Cdecl 10.2

** At most one of `virtual`, `final`, or `override`.
In C++, at most one of `virtual`, `final`, or `override` is now printed.


* Changes in Cdecl 10.1

** More robust scoped name type checking
Scoped names' scope-types are now checked against previous declarations.  For
example, the second declaration's attempted use of N::C as a namespace is now
flagged as an error because it was previously declared as a class:

    c++decl> namespace N { class C; }
    c++decl> namespace N::C { class D; }
                       ^
    11: error: "N::C" was previously declared as a class:
    > namespace N { class C; }

** More C++ std types
Added types `std::chars_format`, `std::ctype_base::mask`, `std::ios_base`,
`std::ios_base::event`, `std::ios_base::event_callback`,
`std::ios_base::fmtflags`, `std::ios_base::Init`, `std::ios_base::iostate`,
`std::ios_base::openmode`, `std::ios_base::seekdir`, `std::launch`,
`std::regex_constants::match_flag_type`, and
`std::regex_constants::syntax_option_type`.


* Changes in Cdecl 10.0.1

** Fixed flex-debug build
A syntax error in the flex-debug build was fixed.


* Changes in Cdecl 10.0

** `asm` declarations
Now recognizing `asm` just to say it's not supported.

** `bootstrap`
Added a `bootstrap` script.

** No lexer & parser error messages
When the lexer prints an error message, the parser no longer does.

** Improved `operator<=>`
Now ensuring return type is one of auto, std::partial_ordering,
std::strong_ordering, or std::weak_ordering; and that all parameters are a
class or reference thereto.

** Default relational operators
Default relational operators in C++20 are now supported.

** C++ raw string literals
C++'s raw string literals `R"delim(...)delim"` are now supported.

** Relaxed `main()` checks